--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,194 @@
 body {
-  background-color: aqua;
+  background-color: hsl(233, 47%, 7%);
+  font-size: 15px;
+  font-family: Inter;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  margin-top: 0;
+  width: 1080px;
+  min-width: 800px;
+  height: 50%;
+  min-height: 500px;
+  padding: 0 50px;
+}
+
+.container-text {
+  width: calc(50% - 150px);
+  height: calc(100% - 75px - 50px);
+  background-color: hsl(244, 38%, 16%);
+  padding: 75px 75px 50px;
+  border-radius: 10px 0 0 10px;
+}
+
+.container-text-heading {
+  color: hsl(0, 0%, 100%);
+  font-weight: 700;
+  font-size: 35px;
+  margin: 0;
+  line-height: 1.25;
+}
+
+.container-text-heading span {
+  color: hsl(277, 64%, 61%);
+}
+
+.container-text-description {
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 15px;
+  line-height: 1.7;
+  margin: 25px 0 70px 0;
+}
+
+.container-stats {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 400px) {
+  .container-stats {
+    flex-direction: column;
+  }
+}
+
+.stats-description {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: Lexend Deca;
+  margin-top: 5px;
+  letter-spacing: 2px;
+  color: hsla(0, 0%, 100%, 0.6);
+}
+
+.stats-nums {
+  margin: 0;
+  font-size: 23px;
+  font-family: inter;
+  font-weight: 700;
+  color: hsl(0, 0%, 100%);
+}
+
+.card {
+  width: 90%;
+  float: left;
+}
+
+.container-img {
+  width: 50%;
+  height: 100%;
+  border-radius: 0 10px 10px 0;
+}
+
+.container-img div {
+  height: 100%;
+  width: 100%;
+  background: hsl(277, 64%, 61%) url(/images/image-header-desktop.jpg) no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
+  border-radius: 0 10px 10px 0;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    min-width: 650px;
+  }
+
+  .container-text {
+    width: calc(50% - 100px);
+    height: calc(100% - 120px);
+    padding: 50px;
+    padding-top: 70px;
+  }
+
+  .container-text-heading {
+    font-size: 32px;
+  }
+
+  .container-text-description {
+    margin: 15px 0 30px;
+  }
+
+  .stats-nums {
+    font-size: 20px;
+  }
+
+  .stats-description {
+    font-size: 8px;
+  }
+}
+
+@media (max-width: 700px) {
+  body {
+    height: unset;
+  }
+  .container {
+    flex-direction: column-reverse;
+    width: 90%;
+    min-width: unset;
+    height: unset;
+    min-height: unset;
+    margin: 90px 0;
+    padding: 0 20px;
+  }
+
+  .container-text-heading {
+    font-size: 27px;
+  }
+
+  .container-text-description {
+    font-size: 16px;
+    margin: 15px 0 35px;
+  }
+
+  .container-text,
+  .container-img {
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .container-text {
+    border-radius: 0 0 10px 10px;
+    padding: 30px 30px 40px;
+    text-align: center;
+  }
+
+  .container-img {
+    height: 250px;
+  }
+
+  .container-img div {
+    height: 100%;
+    background-image: url(/images/image-header-mobile.jpg);
+  }
+
+  .stats-description {
+    font-size: 11px;
+    letter-spacing: 0;
+  }
+
+  .container-stats div {
+    margin-bottom: 25px;
+  }
+
+  .container-stats div:last-child {
+    margin: 0;
+  }
+
+  .card {
+    width: unset;
+    float: unset;
+    height: 100%;
+  }
+
+  .container-img div {
+    border-radius: 10px 10px 0 0;
+  }
 }
